[package]
name = "wasm-sudoku"
version = "1.0.0"
authors = ["Lorenzo Murarotto <lnzmrr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.78"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
lto = true
